<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_logo"/>

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/imdblogoregister"
        android:contentDescription="@string/registerlogo"
        app:layout_constraintStart_toEndOf="@id/arrow_back"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"/>

    <TextView
        android:id="@+id/create_new_account"
        style="@style/Widget.imdb.TextView"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_una_cuenta"
        app:layout_constraintTop_toBottomOf="@id/register_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/create_new_account"
        app:layout_constraintBottom_toTopOf="@id/input_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintBottom_toTopOf="@id/input_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/contrase_a"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/styles_login_inputs"
        android:text="@string/aceptar"
        android:enabled="false"
        android:theme="@style/ButtonLoginRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />
</androidx.constraintlayout.widget.ConstraintLayout>